--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,25 +1,60 @@
+@import url("https://fonts.googleapis.com/css2?family=Brygada+1918:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 .container {
-    width: 100%;
-    height: 60px;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  box-shadow: 0 1px rgba(0, 0, 0, 0.1);
+  background-color: white;
+
+  .menu {
+    width: 13%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
-}
-
-.title {
-    font-size: 35px;
-    color: rgb(70, 70, 217);
-    font-weight: bold;
-}
-
-.menu {
-    width: 200px;
-    height: 100%;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    column-gap: 20px;
+    gap: 20px;
     font-size: 20px;
     font-weight: bolder;
+
+    .divider {
+      width: 1px;
+      height: 30px;
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .toolbuttons,
+    .authbuttons {
+      display: flex;
+      column-gap: 10px;
+
+      button {
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        cursor: pointer;
+        background-color: transparent;
+        font-family: "Inter", sans-serif;
+        font-size: 15px;
+        &:hover {
+          background-color: #d3d3d3;
+        }
+      }
+    }
+    .authbuttons button:nth-child(2) {
+      background-color: #2563eb;
+      color: white;
+      &:hover {
+        background-color: #1a44a0;
+      }
+    }
+    .toolbuttons button:nth-child(2) {
+      color: #ec4899;
+      &:hover {
+        background-color: rgba(236, 72, 153, 0.2);
+      }
+    }
+  }
 }
