finished hero section

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -8,9 +8,12 @@
   padding: 0 30px;
   box-shadow: 0 1px rgba(0, 0, 0, 0.1);
   background-color: white;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 
   .menu {
-    width: 13%;
+    width: 400px;
     height: 100%;
     display: flex;
     justify-content: space-between;
