--- a/src/components/hoverColorLetters/hoverColorLetters.module.css
+++ b/src/components/hoverColorLetters/hoverColorLetters.module.css
@@ -1,8 +1,9 @@
 .container {
     width: 800px;
     height: 400px;
-    font-size: 60px;
-    font-weight: bolder;
+    font-size: 110px;
+    line-height: 110px;
+    letter-spacing: 0.1px;
 }
 
 .letter.anim_color {
