--- a/src/components/tools/tools.module.css
+++ b/src/components/tools/tools.module.css
@@ -5,10 +5,13 @@
   font-family: "Inter", sans-serif;
 
   .title {
-    font-size: 32px;
-    font-weight: 600;
-    color: #000;
-    margin-bottom: 40px;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 60px;
+    color: #333;
+    font-family: "Inter", sans-serif;
+    letter-spacing: 1px;
   }
 
   .toolList {
@@ -38,6 +41,44 @@
     transform: translateY(-4px) scale(1.03);
     transition: all 0.2s ease;
   }
+
+  .toolTitle {
+    font-size: 55px;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 12px;
+    max-width: 60%;
+    padding: 0;
+  }
+
+  .toolDescription {
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+
+  .buttonContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: auto;
+
+    p {
+      margin: 0;
+      font-size: 20px;
+    }
+  }
+
+  .toolButton {
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    font-family: "Inter", sans-serif;
+  }
 }
 
 .generator {
@@ -52,6 +93,10 @@
   }
 
   .toolButton {
+    color: #0891b2;
+  }
+
+  .buttonContainer p {
     color: #0891b2;
   }
 
@@ -85,6 +130,10 @@
     color: #2563eb;
   }
 
+  .buttonContainer p {
+    color: #3b82f6;
+  }
+
   &:hover {
     background-color: #2563eb;
 
@@ -113,6 +162,10 @@
 
   .toolButton {
     color: #9333ea;
+  }
+
+  .buttonContainer p {
+    color: #a855f7;
   }
 
   &:hover {
@@ -145,6 +198,10 @@
     color: #db2777;
   }
 
+  .buttonContainer p {
+    color: #ec4899;
+  }
+
   &:hover {
     background-color: #db2777;
 
@@ -173,6 +230,10 @@
 
   .toolButton {
     color: #dc2626;
+  }
+
+  .buttonContainer p {
+    color: #f97316;
   }
 
   &:hover {
@@ -205,6 +266,10 @@
     color: #ea580c;
   }
 
+  .buttonContainer p {
+    color: #eab308;
+  }
+
   &:hover {
     background-color: #ea580c;
 
@@ -233,6 +298,10 @@
 
   .toolButton {
     color: #ca8a04;
+  }
+
+  .buttonContainer p {
+    color: #eab308;
   }
 
   &:hover {
@@ -265,6 +334,10 @@
     color: #16a34a;
   }
 
+  .buttonContainer p {
+    color: #10b981;
+  }
+
   &:hover {
     background-color: #16a34a;
 
@@ -278,74 +351,4 @@
       color: white;
     }
   }
-}
-
-.toolTitle {
-  font-size: 55px;
-  font-weight: 500;
-  margin-top: 0;
-  margin-bottom: 12px;
-  max-width: 60%;
-  padding: 0;
-}
-
-.toolDescription {
-  font-size: 20px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-.buttonContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: auto;
-
-  p {
-    margin: 0;
-    font-size: 20px;
-  }
-}
-
-.toolButton {
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: 0.5px;
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  font-family: "Inter", sans-serif;
-}
-
-.generator .buttonContainer p {
-  color: #0891b2;
-}
-
-.explore .buttonContainer p {
-  color: #3b82f6;
-}
-
-.imagePicker .buttonContainer p {
-  color: #a855f7;
-}
-
-.contrastChecker .buttonContainer p {
-  color: #ec4899;
-}
-
-.visualizer .buttonContainer p {
-  color: #f97316;
-}
-
-.colorPicker .buttonContainer p {
-  color: #eab308;
-}
-
-.tailwind .buttonContainer p {
-  color: #eab308;
-}
-
-.colorBot .buttonContainer p {
-  color: #10b981;
 }
