--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -13,7 +13,7 @@
   z-index: 1000;
 
   .menu {
-    width: 400px;
+    width: 500px;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -41,6 +41,8 @@
         background-color: transparent;
         font-family: "Inter", sans-serif;
         font-size: 15px;
+        white-space: nowrap;
+        min-width: fit-content;
         &:hover {
           background-color: #d3d3d3;
         }
