--- a/src/components/apps/apps.module.css
+++ b/src/components/apps/apps.module.css
@@ -28,6 +28,8 @@
       transition: all 0.2s ease;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
       border: 2px solid #ececec;
       font-family: "Inter", sans-serif;
       text-align: center;
@@ -53,8 +55,7 @@
       .appTitle {
         font-size: 32px;
         font-weight: 400;
-        margin-top: 0;
-        margin-bottom: 12px;
+        margin: 0;
         padding: 0;
       }
     }
